--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,11 @@
 		<version>2.7.2</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.kylehoehns.approval</groupId>
+	<groupId>com.kylehoehns.blindrefactoringa</groupId>
 	<artifactId>demo</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>demo</name>
-	<description>Approval Tests Demo</description>
+	<description>Blind Refactoring Demo</description>
 	<properties>
 		<java.version>18</java.version>
 	</properties>
