--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,16 +7,16 @@ on:
 jobs:
   verify:
     name: Verify Code
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
 
-      - name: Install Java 18
+      - name: Install Java 19
         uses: actions/setup-java@v2
         with:
           distribution: 'temurin'
-          java-version: '18'
+          java-version: '19'
           cache: 'maven'
 
       - name: Build Java Project
